--- a/Homework 10.5 - Telegram_bot_GUI/MainWindow.xaml
+++ b/Homework 10.5 - Telegram_bot_GUI/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Homework_10._5___Telegram_bot_GUI"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="Homework_10._5___Telegram_bot_GUI.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
+        Title="MainWindow" Height="267" Width="491"
         
      TextElement.Foreground="{DynamicResource MaterialDesignBody}"
      TextElement.FontWeight="Regular"
@@ -15,9 +15,8 @@
      TextOptions.TextRenderingMode="Auto"
      Background="{DynamicResource MaterialDesignBodyLight}"
      FontFamily="{DynamicResource MaterialDesignFont}">
-    
+
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="361,232,0,0" VerticalAlignment="Top" Style="{DynamicResource MaterialDesignFlatAccentBgButton}" Cursor="Hand"/>
-        <CheckBox Content="CheckBox" HorizontalAlignment="Left" Margin="377,318,0,0" VerticalAlignment="Top" Style="{DynamicResource MaterialDesignActionAccentCheckBox}" Cursor="Hand"/>
+        <Button Content="Button" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource MaterialDesignFlatAccentBgButton}" Cursor="Hand" Click="Button_Click"/>
     </Grid>
 </Window>
