--- a/Homework 10.5 - Telegram_bot_GUI/MainWindow.xaml
+++ b/Homework 10.5 - Telegram_bot_GUI/MainWindow.xaml
@@ -3,20 +3,20 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Homework_10._5___Telegram_bot_GUI"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="Homework_10._5___Telegram_bot_GUI.MainWindow"
+        x:Class="Homework_10._5___Telegram_bot_GUI.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="267" Width="491"
+        Title="Telegram Bot GUI" Height="267" Width="491"
         
-     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-     TextElement.FontWeight="Regular"
-     TextElement.FontSize="13"
-     TextOptions.TextFormattingMode="Ideal"
-     TextOptions.TextRenderingMode="Auto"
-     Background="{DynamicResource MaterialDesignBodyLight}"
-     FontFamily="{DynamicResource MaterialDesignFont}">
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal"
+        TextOptions.TextRenderingMode="Auto"
+        Background="{DynamicResource MaterialDesignBodyLight}"
+        FontFamily="{DynamicResource MaterialDesignFont}">
 
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource MaterialDesignFlatAccentBgButton}" Cursor="Hand" Click="Button_Click"/>
+        <Button Content="Button" HorizontalAlignment="Center" VerticalAlignment="Center" Cursor="Hand" Click="Button_Click"/>
     </Grid>
+    
 </Window>
